--- a/css/uselect.css
+++ b/css/uselect.css
@@ -268,6 +268,7 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 	-webkit-box-shadow: 0 0 10px rgb(249, 183, 43); 
 	-moz-box-shadow: 0 0 10px rgb(249, 183, 43); 
 	font-size:16px;
+	padding: 2px;
 }
 
 #transcript-inst {
