--- a/css/uselect.css
+++ b/css/uselect.css
@@ -278,6 +278,10 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 
 .logos {
 	position: absolute;
+	display:block;
 	top: 2px;
 	left: 844px;
+}
+.logos img {
+	border: none;
 }
