--- a/css/uselect.css
+++ b/css/uselect.css
@@ -46,7 +46,7 @@ ul {
 
 #control-hldr {
 	z-index: 100;
-	height: 48px;
+	height: 40px;
 	position: absolute;
 	width: 1000px;
 	background-color: #FCC95C;
@@ -56,7 +56,7 @@ ul {
 }
 
 .control {
-	padding: 12px 12px 12px 76px;
+	padding: 8px 12px 8px 76px;
 	white-space: nowrap;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -89,7 +89,7 @@ ul {
 }  
 
 #transcript-content {
-	top: 480px;
+	top: 460px;
 }
 
 /* Generic pane rules */
@@ -97,7 +97,7 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 .page { left: 0; right: 0; top: 0; bottom: 0; }
 .row, .col, .page { overflow: hidden; position: absolute; }
 .row { left: 0; right: 0; }
-.col { top: 0; bottom: 0; border-left: 4px solid #eee;}
+.col { top: 0; bottom: 0; }
 .scroll-y { overflow-y: auto; -webkit-overflow-scrolling: touch; }
 .fill, .pane { position: absolute; left: 0; top: 0; right: 0; bottom: 0; width: 100%; height: 100% }
 .pane { display: none; }
@@ -112,7 +112,7 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 }
 .header { font-size: 16px; }
 .body, .pane { background: #fcfcfc; }
-.right.col .body { padding: 0 16px; }
+.right.col .body { padding: 0 0 0 16px; }
 .middle.col .body { padding: 0 16px; }
 .listview { padding-top: 16px; padding-left: 0px; margin: 0; font-weight: bold; color: #444; }
 .listview li { 
@@ -128,6 +128,7 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 	border-right: 1px solid #eee;
 }
 
+
 .header {
 	font-size: 12px;
 	font-weight: bold;
@@ -137,12 +138,15 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 
 /* Pane configuration */
 
-.middle.col { width: 752px; }
-.right.col { left: 756px; width: 239px; font-size: 15px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;line-height:20px;}
+.middle.col { width: 736px; }
+.right.col { left: 736px; width: 262px; font-size: 15px; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;line-height:20px;margin-bottom:0;}
 .header.row { top: 48px; height: 30px; }
-.body.row { top: 50px; bottom: 40px; }
-.footer.row { height: 120px; bottom: 0px;}
-.mini-footer { height: 40px; bottom: 0px;}
+.body.row { top: 36px; bottom: 80px; }
+.footer.row { height: 120px; bottom: 40px;}
+.mini-footer { height: 30px; bottom: 50px;}
+.credits { height: 50px; bottom: 0px; background-color: #F9B72B;}
+
+
 
 #corner-text {
 	padding: 0 16px;
@@ -152,8 +156,8 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 
 .media-hldr {
 	position:absolute;
-	top: 50px;
-	padding: 16px;
+	top: 36px;
+	padding: 16px 0 0 16px;
 }
 
 .right-panel {
@@ -220,6 +224,7 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 	text-align: left;
 	background-color: #fff;
 	padding-top: 4px;
+	padding-bottom: 0;
 }
 
 #chart {
@@ -276,12 +281,16 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 	padding: 0 8px 0 8px;
 }
 
-.logos {
-	position: absolute;
-	display:block;
-	top: 2px;
-	left: 844px;
+.logos a{
+	
+	padding-right: 10px;
 }
 .logos img {
 	border: none;
+	padding-top: 4px;
+	padding-left:20px;
+}
+
+#tweet-like {
+	padding-right: 8px;
 }
