--- a/css/uselect.css
+++ b/css/uselect.css
@@ -46,9 +46,9 @@ ul {
 
 #control-hldr {
 	z-index: 100;
-	height: 40px;
+	height: 24px;
 	position: absolute;
-	width: 1000px;
+	width: 736px;
 	background-color: #FCC95C;
 	color: #000;
 	position: absolute;
@@ -56,8 +56,9 @@ ul {
 }
 
 .control {
-	padding: 8px 12px 8px 76px;
+	padding: 0px 8px 4px 76px;
 	white-space: nowrap;
+	font-size: 15px;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -89,7 +90,11 @@ ul {
 }  
 
 #transcript-content {
-	top: 460px;
+	top: 430px;
+}
+
+#target-content {
+	top: 0px;
 }
 
 /* Generic pane rules */
@@ -156,16 +161,15 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 
 .media-hldr {
 	position:absolute;
-	top: 36px;
+	top: 8px;
 	padding: 16px 0 0 16px;
 }
 
 .right-panel {
 	background-color: #eee;
 	text-align: center;
-	padding-bottom: 8px;
-	margin-top: 8px;
 	font-size: 13px;
+	margin-bottom: 8px;
 }
 
 
@@ -187,6 +191,7 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 
 #pie-chart {
 	height:120px;
+	margin-top: -2px;
 }
 
 #pie-chart span {
@@ -221,7 +226,7 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 15px;	
 	font-weight: bold;
-	padding: 4px 0 4px 0;
+	padding: 2px 0 2px 0;
 }
 
 .share-snippet {
@@ -271,22 +276,23 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 #main-loader {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 20px;
-	padding-top: 120px;
+	padding-top: 90px;
 	text-align: center;
 }
 
 #search-btn {
-	padding: 4px;
+	padding: 4px 8px 4px 8px;
+	margin-left: 16px;
 }
 
 .search-str {
 	width:160px; 
-	height:20px; 
 	border:2px solid #666; 
 	-webkit-box-shadow: 0 0 10px rgb(249, 183, 43); 
 	-moz-box-shadow: 0 0 10px rgb(249, 183, 43); 
-	font-size:16px;
+	font-size:14px;
 	padding: 2px;
+	color: #666;
 }
 
 #transcript-inst {
@@ -355,17 +361,50 @@ body { margin: 0; -webkit-text-size-adjust: 100%; }
 
 #fade-top {
 	background-image: url('../fadedown.png');
-	top:460px;
+	top:430px;
 }
 
 #fade-bot {
 	background-image: url('../fadeup.png');
-	top:724px;
+	top:634px;
 }
 
 .content-org {
-	padding-left: 48px;
+	padding-left: 46px;
+}
+
+.mini-footer {
+	padding: 0 16px 0 16px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 12px;
+	line-height: 28px;	
+	text-align: right;
+}
+
+.thumb-hldr {
+	padding-top: 8px;
+	text-align: center;
+	height: 130px;
+	overflow: auto;
+	margin-bottom: 12px;
+}
+
+.thumb-quote {
+	font-style: italic;
+	padding-bottom: 16px;
+	margin: -4px 0 0 0;
+}
+
+.thumb-link {
+	border: 0;
+	padding-top: 8px;
 }
 
 
+#search-box {
+	padding-bottom: 4px;
+}
 
+#recommended {
+	margin-bottom: 4px;
+}
